--- a/source/Aslanta.Billing.Web/Components/Layout/MainLayout.razor
+++ b/source/Aslanta.Billing.Web/Components/Layout/MainLayout.razor
@@ -1,23 +1,11 @@
 ﻿@inherits LayoutComponentBase
+<RadzenComponents @rendermode="InteractiveServer" />
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+<RadzenLayout Style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body'">
+    <Navigation />
+    <RadzenBody>
+        <div style="padding:0; margin: 0; height: 92vh;">
             @Body
-        </article>
-    </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+        </div>
+    </RadzenBody>
+</RadzenLayout>
