--- a/source/Aslanta.Billing.Web/Components/_Imports.razor
+++ b/source/Aslanta.Billing.Web/Components/_Imports.razor
@@ -6,5 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Radzen
+@using Radzen.Blazor
 @using Aslanta.Billing.Web
 @using Aslanta.Billing.Web.Components
