Add place holder for missing information filters.

--- a/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
+++ b/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
@@ -10,6 +10,16 @@
     <RadzenStack Orientation="Orientation.Horizontal" Gap="4px" JustifyContent="JustifyContent.Start"
         AlignItems="AlignItems.Center" class="" Style="border: none; width:50%">
         <RadzenText class="rz-mt-1 rz-mr-2">Missing Info:</RadzenText>
+        <RadzenCheckBoxList TValue="int">
+            <Items>
+                <RadzenCheckBoxListItem Text="Insurance (5)" Value="1" />
+                <RadzenCheckBoxListItem Text="Address (3)" Value="2" />
+                <RadzenCheckBoxListItem Text="DOB (3)" Value="3" />
+                <RadzenCheckBoxListItem Text="Gender (0)" Value="4" />
+                <RadzenCheckBoxListItem Text="ICD (0)" Value="4" />
+                <RadzenCheckBoxListItem Text="Any (8)" Value="5" />
+            </Items>
+        </RadzenCheckBoxList>
     </RadzenStack>
 </RadzenStack>
 
