--- a/source/Aslanta.Billing.Web/Components/App.razor
+++ b/source/Aslanta.Billing.Web/Components/App.razor
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NTL Billing</title>
+    <title>Aslanta Billing</title>
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="NTL.Billing.Web.styles.css" />
+    <link rel="stylesheet" href="Aslanta.Billing.Web.styles.css" />
     <link rel="icon" type="image/x-ico" href="favicon.ico" />
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet />
