--- a/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
+++ b/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
@@ -100,6 +100,19 @@
 
     private void OnSelectAllOrdersChanged(bool? isSelected)
     {
+        if (isSelected == true)
+        {
+            InvoiceState.SelectAllOrders();
+            _orderConfig.Selected = InvoiceState.SelectedOrders.ToList(); // Needed to later trigger the unselect.
+        }
+        else
+        {
+            InvoiceState.UnselectAllOrders();
+            _orderConfig.Selected = null;
+            _invoiceItemConfig.Selected = null;
+        }
+
+        _invoiceItemConfig.Grid?.Reload();
     }
 
     void OnOrderCellContextMenu(DataGridCellMouseEventArgs<Order> args)
