Add custom style to the navigation menu.

--- a/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
+++ b/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
@@ -148,6 +148,16 @@
     </RadzenDataGrid>
 </div>
 
+<style>
+    .options-menu .rz-navigation-item-text {
+        color: black;
+    }
+
+    .options-menu .rz-navigation-item-icon-children {
+        color: black;
+    }
+</style>
+
 @code {
     private Layout _layout = new Layout();
     private OrderGridConfig _orderConfig = new OrderGridConfig();
