Fix null chek warning.

--- a/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
+++ b/source/Aslanta.Billing.Web/Components/BillInsurance/CreateInvoice.razor
@@ -250,7 +250,7 @@ new ContextMenuItem(){ Text = "Remove", Value = 2, Icon = "remove" }],
         _invoiceItemConfig.ItemToUpdate = invoiceItem;
     }
 
-    private void Reset(InvoiceItem invoiceItem = null)
+    private void Reset(InvoiceItem? invoiceItem = null)
     {
         _invoiceItemConfig.EditorFocused = false;
         _invoiceItemConfig.ItemToUpdate = null;
